// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MKButton renders gradient button 1`] = `
<mock-style
  variant="gradient"
/>
`;

exports[`MKButton renders primary button 1`] = `
<mock-style
  variant="primary"
/>
`;
